# BiblioBackend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Features in SQL File  MtlBiblioDB_v2.sql  MtlBiblioDb_V1-4.sql  README.md  connectionInfoToDB  instNdep.sh  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  django.yml  greetings.yml  python_security_scanner.yml
Backend/: manage.py
Backend/Backend/: settings.py  urls.py
Backend/config/gunicorn/: dev.py  prod.py
Backend/main/: IDEnums.py  IDManagement.py  admin.py  commands.py  forms.py  manage-2.py  models.py  models.py.backup  tests.py  urls.py  views.py
Backend/main/migrations/: 0001_initial.py  0002_auto_20220425_2155.py  0002_libraryuserprofile_delete_libraryuser.py  0003_auto_20220425_2201.py  0003_userlist_delete_libraryuserprofile_and_more.py
Backend/main/templates/main/: acceuil.html  administration.html  base.html  item.html  librairie.html  panier.html  profil.html  search.html
Backend/register/: commands.py  forms.py  tests.py  views.py
Backend/register/templates/registration/: login.html
DbSql/: MtlBiblioDb_vs3.sql
backend/: Comment.py  Item.py  Library.py  Loan.py  Permission.py  Transaction.py  User.py
config/: nginx.conf
dbConfig/: Features in SQL File  MtlBiblioDb_V1-4.sql  MtlBiblioDb_V1-5.sql
