[tool.poetry]
name = "bibliobackend"
version = "0.1.0"
description = "The backend of the BiblioLexicus project"
authors = ["Arik <BBArik@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
isort = "^5.10.1"
Django = "^4.0.2"
pre-commit = "^2.17.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
