[tool.poetry]
name = "bibliobackend"
version = "0.1.0"
description = "The backend of the BiblioLexicus project"
authors = ["Arik <BBArik@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
isort = "^5.10.1"
Django = "^4.0.2"
pre-commit = "^2.18.1"
python-dotenv = "^0.20.0"
mysqlclient = "^2.1.0"
django-crispy-forms = "^1.14.0"
gunicorn = "^20.1.0"
django-csp = "^3.7"
python-dateutil = "^2.8.2"
fast-autocomplete = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
